--- a/style.css
+++ b/style.css
@@ -395,7 +395,7 @@ button, .cta {
 }
 
 .section {
-  padding-block: 5rem 1rem;
+  padding-block: 3rem;
 }
 .section__title {
   font-size: 40px;
@@ -802,6 +802,11 @@ button, .cta {
   text-align: left;
   line-height: 150%;
 }
+.formation__description a {
+  cursor: pointer;
+  color: #FFF9EE;
+  text-decoration: underline;
+}
 .formation__img-right {
   border-top-left-radius: 150px;
   border-bottom-right-radius: 150px;
@@ -938,7 +943,10 @@ button, .cta {
 }
 .agences__content {
   position: relative;
-  padding: 2rem;
+  display: grid;
+  align-items: center;
+  justify-items: center;
+  padding: 20px;
   overflow: hidden;
   text-align: center;
 }
@@ -974,7 +982,7 @@ button, .cta {
   font-weight: 1000;
   letter-spacing: 0.8px;
   text-transform: uppercase;
-  margin-bottom: 1rem;
+  padding-bottom: 10px;
 }
 .agences--adresses {
   color: #D93513;
@@ -982,6 +990,7 @@ button, .cta {
 }
 .agences--adresses a {
   color: #D93513;
+  font-weight: 500;
 }
 
 /* Scrolling text */
@@ -1024,21 +1033,24 @@ button, .cta {
 .permisPresentation {
   background: #052537;
   padding-bottom: 3rem;
+  padding-top: 4rem;
+  margin-top: -50px;
 }
 .permisPresentation h1 {
   font-family: "Georama";
   color: #FFFFFF;
-  padding-top: 10vh;
+  padding-top: 7vh;
 }
 .permisPresentation p {
   color: #FFFFFF;
   padding: 0 40px 0 0;
+  text-align: justify;
 }
 
 .permis {
   background: #37997d;
   color: #FFFFFF;
-  padding: 0 20px;
+  padding: 0 16px;
 }
 .permis h2, .permis h3, .permis h4 {
   font-family: "Georama";
@@ -1062,8 +1074,6 @@ button, .cta {
 .permis__description {
   display: block;
   line-height: 1.5;
-  border-bottom: 1px solid #FFFFFF;
-  border-radius: 5px;
 }
 .permis__description > div {
   margin-block: 20px;
@@ -1074,6 +1084,10 @@ button, .cta {
 .permis__description p, .permis__description span {
   padding: 0 40px 0 0;
 }
+.permis__description--left {
+  border-bottom: 1px solid #FFFFFF;
+  border-radius: 5px;
+}
 .permis .cta {
   margin: 20px 0;
 }
@@ -1082,7 +1096,7 @@ button, .cta {
   font-weight: 500;
 }
 
-.documents {
+.documents .container {
   padding: 0 20px;
 }
 .documents h2 {
@@ -1111,14 +1125,21 @@ button, .cta {
   color: #D93513;
 }
 .contact__left div {
+  display: grid;
   padding: 1rem;
 }
 .contact__left p, .contact__left a, .contact__left ul {
   text-align: center;
   margin-top: 20px;
+  color: #D93513;
+}
+.contact__left svg {
+  margin-left: 10px;
 }
 .contact__title {
   font: 2rem "Georama";
+  font-weight: 900;
+  text-transform: uppercase;
 }
 .contact button {
   transition-duration: 0.5s;
@@ -1139,7 +1160,7 @@ button, .cta {
   text-align: center;
   display: block;
   line-height: 1.3;
-  padding: 0 40px;
+  padding: 0 70px;
   margin: 0 0 30px;
 }
 
@@ -1166,9 +1187,9 @@ button, .cta {
 
 /*=============== SCROLL BAR ===============*/
 ::-webkit-scrollbar {
-  width: 6rem;
+  width: 0.6rem;
   border-radius: 0.5rem;
-  background-color: hsl(18, 100%, 51%);
+  background-color: hsl(19, 8%, 75%);
 }
 ::-webkit-scrollbar-thumb {
   border-radius: 0.5rem;
@@ -1209,6 +1230,12 @@ button, .cta {
   .nav__cta {
     font-size: 12px;
     justify-content: center;
+  }
+  .permis h2 {
+    font-size: 35px;
+  }
+  .permis h3 {
+    font-size: 30px;
   }
 }
 @media (min-width: 380px) {
@@ -1251,6 +1278,9 @@ button, .cta {
   }
 }
 @media (min-width: 767px) {
+  .header {
+    height: 140px;
+  }
   .hero__subtitle {
     font-size: 4rem;
   }
@@ -1299,7 +1329,10 @@ button, .cta {
     grid-template-columns: 50% 50%;
   }
   .agences__content {
-    min-height: 240px;
+    min-height: 220px;
+  }
+  .permisPresentation {
+    padding-top: 6rem;
   }
   .contact__left div {
     padding: 3rem;
@@ -1343,7 +1376,7 @@ button, .cta {
     height: 50vh;
   }
   .contact__left {
-    padding: 12rem 0 5rem;
+    padding: 13rem 0 5rem;
   }
 }
 @media screen and (min-width: 1024px) {
