--- a/assets/sass/components/_breakpoints.scss
+++ b/assets/sass/components/_breakpoints.scss
@@ -376,6 +376,25 @@
       padding: 50px 0;
     }
   }
+
+  .preparation {
+
+    &__description {
+      li {
+
+        & a {
+
+          & svg {
+            top: -3em;
+            right: -20px;
+            rotate: 36deg;
+          }
+        }
+
+      }
+    }
+
+  }
 }
 
 @media (min-width: 1400px) {
