--- a/assets/sass/components/_footer.scss
+++ b/assets/sass/components/_footer.scss
@@ -5,6 +5,7 @@
     font-family: $font-title;
     font-size: $font-ml;
   }
+
   &__description {
     padding: 1rem;
     width: 60%;
@@ -12,6 +13,7 @@
     max-width: 800px;
     text-align: center;
   }
+
   &__container {
     padding-inline: 5%;
     max-width: 80%;
@@ -20,9 +22,19 @@
     padding: 2rem;
     border-radius: 28px;
   }
-  & div.wpforms-container-full { margin: auto; }
-  & .wpforms-container .wpforms-one-third.wpforms-first { width: 100%; }
-  & div.wpforms-container-full input[type=text] { border-radius: 10px; }
+
+  & div.wpforms-container-full {
+    margin: auto;
+  }
+
+  & .wpforms-container .wpforms-one-third.wpforms-first {
+    width: 100%;
+  }
+
+  & div.wpforms-container-full input[type=text] {
+    border-radius: 10px;
+  }
+
   & div.wpforms-container-full button[type=submit]:not(:hover):not(:active) {
     background-color: $brown-100;
     padding: 1rem 1.5rem;
@@ -35,15 +47,17 @@
 .footer {
   background-color: #F4D9D2;
   position: relative;
-  padding-block: 30vh 2rem;
+  padding-block: 36vh 2rem;
   overflow: hidden;
+
   &__insta {
     position: absolute;
     top: 0;
     left: 20vw;
     width: 65vw;
     border-radius: 10px;
-    transform: rotate(-10deg);
+    rotate: -10deg;
+
     & span {
       font-family: $font-title;
       color: $red-100;
@@ -51,6 +65,7 @@
       font-weight: 800;
     }
   }
+
   & h4 {
     font-family: $font-title;
     color: $red-100;
@@ -58,12 +73,27 @@
     font-weight: 900;
     margin-block: 3.5rem;
   }
+
   &__form {
     display: grid;
-    & >div { padding-bottom: 1rem; }
-    & p, & a { color: $red-100; }
-    &-mail p, &-social p { text-decoration: underline; }
+
+    &>div {
+      padding-bottom: 1rem;
+    }
+
+    & p,
+    & a {
+      color: $red-100;
+    }
+
+    &-mail p,
+    &-social p {
+      text-decoration: underline;
+    }
 
   }
-  &__after { text-align: center; }
+
+  &__after {
+    text-align: center;
+  }
 }
