--- a/assets/sass/pages/_permis.scss
+++ b/assets/sass/pages/_permis.scss
@@ -223,18 +223,46 @@
   &__description {
     li {
       list-style: disc;
-    }
-
-    a {
       position: relative;
 
-      & svg {
-        position: absolute;
-        top: -35px;
-        right: -20px;
-        rotate: 29deg;
+      & a {
+        position: relative;
+
+        & svg {
+          position: absolute;
+          top: 0;
+          right: -3em;
+          rotate: 100deg;
+          animation: bounce 1s infinite;
+        }
+      }
+
+      span {
+        color: $red-100;
+        font-weight: 500;
+        font-size: 2em;
       }
     }
   }
 
+}
+
+
+@keyframes bounce {
+
+  0%,
+  20%,
+  50%,
+  80%,
+  100% {
+    transform: translateY(0);
+  }
+
+  40% {
+    transform: translateY(-30px);
+  }
+
+  60% {
+    transform: translateY(-15px);
+  }
 }
