--- a/style.css
+++ b/style.css
@@ -435,7 +435,7 @@ button, .cta {
   box-shadow: 0 5px 15px 0 rgba(0, 0, 0, 0.15);
   transition: all 0.3s ease-in;
 }
-.cta :hover {
+.cta:hover {
   background-color: #F2E205;
   color: #D93513;
   scale: 1.05;
@@ -533,7 +533,7 @@ button, .cta {
   transition: color 0.4s;
 }
 .nav__link:hover {
-  color: #545454;
+  color: #F2E205;
 }
 .nav__dropdown {
   position: relative;
@@ -602,7 +602,7 @@ button, .cta {
 .footer {
   background-color: #F4D9D2;
   position: relative;
-  padding-block: 30vh 2rem;
+  padding-block: 36vh 2rem;
   overflow: hidden;
 }
 .footer__insta {
@@ -611,7 +611,7 @@ button, .cta {
   left: 20vw;
   width: 65vw;
   border-radius: 10px;
-  transform: rotate(-10deg);
+  rotate: -10deg;
 }
 .footer__insta span {
   font-family: "Georama";
@@ -1089,7 +1089,9 @@ button, .cta {
   display: block;
   line-height: 1.5;
 }
-.permis h2, .permis h3, .permis h4 {
+.permis h2,
+.permis h3,
+.permis h4 {
   font-family: "Georama";
   color: #FFFFFF;
 }
@@ -1117,7 +1119,8 @@ button, .cta {
 .permis span {
   display: block;
 }
-.permis p, .permis span {
+.permis p,
+.permis span {
   padding: 0 40px 0 0;
 }
 .permis li {
@@ -1198,6 +1201,47 @@ button, .cta {
   list-style: disc;
 }
 
+.preparation .container {
+  padding: 0 20px;
+}
+.preparation h2 {
+  font-family: "Georama";
+  font-size: 25px;
+  font-weight: 800;
+  text-transform: uppercase;
+  letter-spacing: 2px;
+}
+.preparation__description li {
+  list-style: disc;
+  position: relative;
+}
+.preparation__description li a {
+  position: relative;
+}
+.preparation__description li a svg {
+  position: absolute;
+  top: 0;
+  right: -3em;
+  rotate: 100deg;
+  animation: bounce 1s infinite;
+}
+.preparation__description li span {
+  color: #D93513;
+  font-weight: 500;
+  font-size: 2em;
+}
+
+@keyframes bounce {
+  0%, 20%, 50%, 80%, 100% {
+    transform: translateY(0);
+  }
+  40% {
+    transform: translateY(-30px);
+  }
+  60% {
+    transform: translateY(-15px);
+  }
+}
 .contact {
   margin-top: -50px;
 }
@@ -1597,8 +1641,13 @@ button, .cta {
     padding: 5rem;
   }
   .contact__right {
-    margin: 7rem 0 0;
+    margin: 0;
     padding: 50px 0;
+  }
+  .preparation__description li a svg {
+    top: -3em;
+    right: -20px;
+    rotate: 36deg;
   }
 }
 @media (min-width: 1400px) {
